macro-template/tests/ui/err/bracketed_row.stderr
error: rows for multiple template variables must use parentheses, such as `(u16, 2)`
 --> tests/ui/err/bracketed_row.rs:6:13
  |
6 |             [u16, 2],
  |             ^
